--- a/custom_components/dmi_weather/manifest.json
+++ b/custom_components/dmi_weather/manifest.json
@@ -4,7 +4,7 @@
   "documentation": "https://github.com/crusell/dmi_weather",
   "dependencies": [],
   "codeowners": ["@crusell"],
-  "requirements": ["aiohttp"],
+  "requirements": [],
   "version": "1.0.0",
   "config_flow": true,
   "iot_class": "cloud_polling",
